--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<div>
 <h1> Study Timer</h1>
 
 <p id="time"></p>
@@ -16,7 +16,7 @@
 <button id="start_btn" onclick="start_timer(); change_title(); button_show();" >Start</button>
 <button id="stop" onclick=stop_timer()>Stop</button>
 <button id="start_again" onclick="start_again(); start_timer();">Start Again</button>
-
+</div>
 <script src="timer.js">
 </script>    
 
